--- a/src/main/resources/com/pasegados/labo/calibraciones/TabCalibraciones.fxml
+++ b/src/main/resources/com/pasegados/labo/calibraciones/TabCalibraciones.fxml
@@ -162,8 +162,8 @@
                   </Button>
                   <GridPane styleClass="contenedorSecundario" GridPane.rowIndex="2">
                     <columnConstraints>
-                      <ColumnConstraints hgrow="NEVER" minWidth="132.0" prefWidth="132.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="80.0" prefWidth="80.0" />
+                      <ColumnConstraints hgrow="NEVER" maxWidth="149.0" minWidth="132.0" prefWidth="144.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0" minWidth="80.0" prefWidth="107.0" />
                         <ColumnConstraints hgrow="NEVER" maxWidth="45.0" minWidth="45.0" prefWidth="45.0" />
                         <ColumnConstraints hgrow="SOMETIMES" maxWidth="275.0" minWidth="110.0" prefWidth="110.0" />
                         <ColumnConstraints hgrow="NEVER" maxWidth="50.0" minWidth="50.0" prefWidth="50.0" />
@@ -260,7 +260,7 @@
                               <Font name="System Bold" size="12.0" />
                            </font>
                         </Label>
-                        <Label styleClass="labelInforme" text="Patrones usados:" GridPane.rowIndex="3">
+                        <Label styleClass="labelInforme" text="Patrones asignados:" GridPane.rowIndex="3">
                            <GridPane.margin>
                               <Insets left="25.0" />
                            </GridPane.margin>
@@ -317,7 +317,7 @@
                               <Font name="System Bold" size="12.0" />
                            </font>
                            <GridPane.margin>
-                              <Insets />
+                              <Insets left="-40.0" />
                            </GridPane.margin>
                            <padding>
                               <Insets left="50.0" />
